--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ハンドルネームのポートフォリオ</title>
+        <link href="style.css" rel="stylesheet">
+    <title>yuu-7777のポートフォリオ</title>
   </head>
   <body>
-    <h1>ハンドルネーム</h1>
+    <h1>yuu-7777</h1>
     
     <h2>About</h2>
     <p>
